# rust-lambda-authorizer

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: api_gateway.rs  auth_handlers.rs  config.rs  jwt_service.rs  lib.rs  test_utils.rs
