[package]
name = "rust-lambda-authorizer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "v1-authorizer"
path = "src/bin/v1_authorizer.rs"

[[bin]]
name = "v2-authorizer"
path ="src/bin/v2_authorizer.rs"

[dependencies]
lambda_runtime = "0.5.1"
aws_lambda_events = "0.6.3"
serde = { version = "1.0.82", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "json"] }
aws-smithy-client = { version = "0.43.0", features = ["test-util"] }
aws-smithy-http = "0.43.0"
log = "^0.4.17"
jsonwebtoken = "8.1.0"
#once_cell = "1.12.0"
reqwest = { version = "0.11.10", default-features = false, features = ["json", "blocking", "rustls-tls"] }
#aws-sdk-sts = "0.13.0"
#aws-config = "0.13.0"
#nanoid = "0.4.0"
async-trait = "0.1.56"
http = "0.2.8"
mockall = "0.11.1"

[dev-dependencies]
http = "0.2.8"
spectral = "0.6.0"